<resources>
    <string name="app_name">Current View App</string>
    <string name="password_txt">Password</string>

    <!--Strings used for the Navigation bar -->
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <!--Strings used for the Dashboard -->
    <string name="Username">Username:</string>
    <string name="Next">Next</string>
    <string name="Done">Done</string>
    <string name="Back">Back</string>
    <string name="help">Help</string>
    <string name="Setting">Setting</string>

    <!--Strings used for the Questionnaire -->
    <string name="section_by_section">Section By Section</string>
    <string name="overview">Overview</string>
    <string name="Previous_Questionnaires">Previous Questionnaires</string>
    <string name="New_Questionnaire">New Questionnaire</string>

    <string name="nhs_id">NHS ID:</string>
    <string name="cyp_name">CYP Name:</string>
    <string name="dob">DOB:</string>
    <string name="date">DATE:</string>
    <string name="time">TIME:</string>
    <string name="reason_of_completing_this_form">REASON OF COMPLETING THIS FORM:</string>

    <string name="Empty">____</string>
    <string name="Provisional_Problem_Description">Provisional Problem Description</string>
    <string name="None">None</string>
    <string name="Mild">Mild</string>
    <string name="Moderate">Moderate</string>
    <string name="Severe">Severe</string>
    <string name="Not_Known">Not Known</string>
    <string name="anxious_away_from_caregivers">Anxious away from caregivers</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>

    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>

    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>

    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>


    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>

    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>

    <!--Questionnairequestions-->
    <string name="q1">Anxious away from caregivers (Separation anxiety)</string>
    <string name="q2">Anxious in social situations (Social anxiety/phobia)</string>
    <string name="q3">Anxious generally (Generalized anxiety)</string>
    <string name="q4">Anxious in social situations</string>
    <string name="q5">Panics (Panic disorder)</string>
    <string name="q6">Avoids going out (Agoraphobia)</string>
    <string name="q7">Avoids specific things (Specific phobia)</string>
    <string name="q8">Repetitive problematic behaviours (Habit problems)</string>
    <string name="q9">Depression/low mood (Depression)</string>
    <string name="q10">Self-Harm (Self-injury or self-harm)</string>

    <string name="q11">Extreme of mood (Bipolar disorder)</string>
    <string name="q12">Delusional beliefs and hallucinations (Psychosis)</string>
    <string name="q13">Drugs and alcohol difficulties (Substance abuse)</string>
    <string name="q14">Difficulties sitting still or concentrating (ADHD/ Hyperactivity)</string>
    <string name="q15">Behavioural difficulties (CD or ODD)</string>
    <string name="q16">Poses risk to others</string>
    <string name="q17">Carer management of CYP behaviour (e.g. management of child)</string>
    <string name="q18">Doesn\'t get to toilet in time (Elimination problem)</string>
    <string name="q19">Disturbed by traumatic event (PTSD)</string>
    <string name="q20">Eating issues (Anorexia/ Bulimia)</string>


    <string name="q21">Family relationship difficulties</string>
    <string name="q22">Problems in attachment to parent/carer (Attachment problems)</string>
    <string name="q23">Peer relationship difficulties</string>
    <string name="q24">Persistent difficulties managing relationships with others (includes emerging personality disorder)</string>
    <string name="q25">Does not speak (Selective mutism)</string>
    <string name="q26">Gender discomfort issues (Gender Identity disorder)</string>
    <string name="q27">Unexplained physical symptoms</string>
    <string name="q28">Unexplained developmental difficulties</string>
    <string name="q29">Self-care Issues (include medical care management, obesity)</string>
    <string name="q30">Adjustment to health issues</string>

    <string name="q31">Looked after child</string>
    <string name="q32">Young carer status</string>
    <string name="q33">Learning disability</string>
    <string name="q34">Serious physical health issues (including chronic fatigue)</string>
    <string name="q35">Pervasive Developmental Disorders (Autism/ Asperger\'s)</string>
    <string name="q36">Neurological issues (e.g. Tics or Tourette\'s)</string>
    <string name="q37">Current protection plan</string>

    <string name="q38">Deemed"child in need"of social service input</string>
    <string name="q39">Refugee or asylum seeker</string>
    <string name="q40">Experience of war, torture or trafficking</string>
    <string name="q41">Experience of abuse or neglect</string>
    <string name="q42">Parental health issues</string>
    <string name="q43">Contact with Youth Justice System</string>
    <string name="q44">Living in financial difficulty</string>
    <string name="q45">Home</string>
    <string name="q46">School, Work or Training</string>
    <string name="q47">Community</string>
    <string name="q48">Service Engagement</string>
    <string name="q49">Attendance Difficulties</string>
    <string name="q50">Attainment Difficulties</string>


    <string name="Selected_Complecity_Factors">Selected Complexity Factors</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Contextual_Problems">Contextual Problems</string>

    <!--Strings used for the Sorting Spinner in Previous Questionnaires-->
    <string name="sort_prompt">Sort by:</string>
    <string name="spinner_title">Spinner</string>
    <string name="Education_employment_training">Education/ Employment/ Training</string>
    <string-array name="questionnaire_array">
        <item>Practitioner: First Name A-Z</item>
        <item>Practitioner: First Name Z-A</item>
        <item>Patient: First Name A-Z</item>
        <item>Patient: First Name Z-A</item>
        <item>Date Created: Newest-Oldest</item>
        <item>Date Created: Oldest-Newest</item>
    </string-array>

    <!-- Help Page -->

    <string name="Help_Title">Help Page</string>
    <string name="Creating_New_Questionnaire_Help">To start a new questionnaire, first click on the Questionnaire Menu
        button. Once inside the questionnaire main menu you can then choose to start a new questionnaire with the Section by
        Section method or with the Overview method.\n\nThe Section by Section method allows you to fill out the questionnaire in a very easy way, as the app will guide you
        through blocks of questions that are related to each other. The progress bar will indicate how many questions of each
        block have been completed and in case you forgot a question, a system notification will let you know about it.\n\nThe Overview method is tailored towards the big picture people. By using this method you can fill out the whole questionnaire
        on one single screen. Not a lot of clicking and moving around. You simply select the checkboxes and complete your questionnaire.
        Similar to the Section by Section method, you too will have a progress bar that indicates how many questions are still waiting
        to be answered.\n\nOnce you are done with the questionnaire, the app will save it and you can easily access the
        questionnaire through the Previous Questionnaire Menu any time.
    </string>
    <string name="creating_a_new_questionnaire">Creating a new Questionnaire</string>
    <string name="looking_at_previous_questionnaires">Looking at previous Questionnaires</string>
    <string name="help_previous_questionnaires">To look at previous questionnaires, you simply go to the Previous
        Questionnaire Menu and select from the questionnaires that are shown. If you are having difficulties finding the
        questionnaire, then make use of the sorting functions so that you can easily locate the questionnaire that you
        are interested in.
    </string>


</resources>
