<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_menu_manage"
                android:title="Dashboard"/>
        <item
                android:id="@+id/nav_new_questionnaire"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/New_Questionnaire"/>
        <item
                android:id="@+id/nav_previous_questionnaire"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Previous_Questionnaires"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/help"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/logout"/>
        </menu>
    </item>

</menu>
