<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="984dp"
            android:scrollbars="vertical|horizontal"
            android:fillViewport="true">

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/table_layout">

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Empty"
                        android:layout_column="1" android:layout_weight="1"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Provisional_Problem_Description"
                        android:textStyle="bold"
                        android:layout_column="2" android:layout_weight="2"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/None"
                        android:layout_column="3" android:layout_weight="1" android:textAlignment="center"
                        android:textSize="20dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Mild"
                        android:layout_column="4" android:layout_weight="1" android:textAlignment="center"
                        android:textSize="20dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Moderate"
                        android:layout_column="5" android:layout_weight="1" android:textAlignment="center"
                        android:textSize="20dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Severe"
                        android:layout_column="6" android:layout_weight="1" android:textAlignment="center"
                        android:textSize="20dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Not_Known"
                        android:layout_column="7" android:layout_weight="1" android:textAlignment="center"
                        android:textSize="20dp"/>

            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>

