<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="uk.ucl.group21.currentviewapp.Dashboard">

    <Button
            android:layout_height="80dp"
            android:text="@string/help"
            android:id="@+id/btnHelp"
            android:onClick="btnHelp"
            android:layout_marginTop="75dp"
            android:layout_width="200dp" android:layout_below="@+id/NewQuestionnaireButton"
            android:layout_alignEnd="@+id/NewQuestionnaireButton" android:layout_marginEnd="12dp"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/Setting"
            android:id="@+id/btnSetting"
            android:onClick="btnSetting"
            android:layout_alignTop="@+id/btnHelp" android:layout_alignStart="@+id/previousQuestionnairesButton"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Login Complete"
            android:id="@+id/systemMessage"
            android:layout_below="@+id/textView" android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp"/>
    <Button
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:text="@string/Previous_Questionnaires"
            android:id="@+id/previousQuestionnairesButton"
            android:onClick="btnPrevQuestion"
            android:layout_marginTop="113dp"
            android:layout_below="@+id/systemMessage" android:layout_toEndOf="@+id/systemMessage"/>
    <Button
            android:layout_width="300dp"
            android:text="@string/New_Questionnaire"
            android:id="@+id/NewQuestionnaireButton"
            android:onClick="btnNewQuestion"
            android:layout_height="200dp"
            android:layout_alignTop="@+id/previousQuestionnairesButton" android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Username"
            android:id="@+id/textView"
            android:layout_marginTop="89dp" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>

</RelativeLayout>
