<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="uk.ucl.group21.currentviewapp.Help">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Help_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="30sp"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="@string/creating_a_new_questionnaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="@string/Creating_New_Questionnaire_Help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="@string/looking_at_previous_questionnaires"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="Step 3."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView11"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>